[project]
name = "HYD"
version = "0.1.0"
description = ""
authors = [
    {name = "Sandy",email = "7pandeys@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "fpdf (>=1.7.2,<2.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
